added plotly support yeah

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -11,7 +11,11 @@
 		<!-- To automatically render math in text elements, include the auto-render extension: -->
 		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/contrib/auto-render.min.js" integrity="sha384-43gviWU0YVjaDtb/GhzOouOXtZMP/7XUzwPTstBeZFe/+rCMvRwr4yROQP43s0Xk" crossorigin="anonymous"
 			onload="renderMathInElement(document.body);"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<script src="plotly-2.35.2.min.js" charset="utf-8"></script>
+			
+		
+			<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
